fixed dark mode issue

--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,7 @@
 
 .notify-information {
   background-color: rgb(224 224 227 / 1);
+  color: #333;
   font-size: inherit;
 }
 
